--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: umeng_analytics_sdk
 description: A new flutter plugin project.
-version: 0.1.1
+version: 1.0.0
 homepage: https://github.com/dev-zhang/umeng_analytics
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.20.0"
 
 dependencies:
