--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/' }
     }
 
     dependencies {
@@ -17,7 +17,7 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/' }
     }
 }
 
@@ -36,6 +36,6 @@ android {
 
 dependencies {
     // 友盟统计SDK
-    implementation  'com.umeng.umsdk:common:9.3.3' // 版本号(必选)
-    implementation  'com.umeng.umsdk:asms:1.1.4' // asms包依赖(必选)
+    implementation  'com.umeng.umsdk:common:9.3.8' // 版本号(必选)
+    implementation  'com.umeng.umsdk:asms:1.2.2' // asms包依赖(必选)
 }
